<?xml version="1.0"?>
<package>
  <name>creative_gesture_launch</name>
  <version>0.0.0</version>
  <description>The creative_gesture_launch package</description>

  <maintainer email="inagaki@todo.todo">inagaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


</package>